--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "process-dispatcher"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+futures = { version = "0.3.31", features = ["std"] }
+sqlx = { version = "0.8.2", features = ["runtime-tokio", "mysql", "migrate"] }
+tokio = { version = "1.40.0", features = ["full"] }
