--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,18 @@
 [package]
-name = "process-dispatcher"
+name = "process_dispatcher"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-chrono = "0.4.38"
+chrono = { version = "0.4.38", features = ["serde"] }
 chrono-tz = "0.10.0"
 futures = { version = "0.3.31", features = ["std"] }
 sqlx = { version = "0.8.2", features = ["runtime-tokio", "mysql", "migrate", "uuid"] }
 tokio = { version = "1.40.0", features = ["full"] }
-uuid = { version = "1.11.0", features = ["v4"] }
+uuid = { version = "1.11.0", features = ["v4", "serde"] }
 formatted_logger = "0.4.0"
 log = "0.4.22"
+axum = { version = "0.8.4" }
+dashmap = "6.1.0"
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.140"
