--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ axum = { version = "0.8.4" }
 dashmap = "6.1.0"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.140"
+tokio-util = "0.7"
